--- a/app/src/main/res/drawable/icon_share.xml
+++ b/app/src/main/res/drawable/icon_share.xml
@@ -1,23 +1,5 @@
-<vector android:height="26.454546dp" android:viewportHeight="97"
-    android:viewportWidth="88" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#00000000"
-        android:pathData="M70.267,31.107C77.476,31.107 83.32,25.263 83.32,18.053C83.32,10.844 77.476,5 70.267,5C63.058,5 57.213,10.844 57.213,18.053C57.213,25.263 63.058,31.107 70.267,31.107Z"
-        android:strokeColor="#979797" android:strokeLineCap="round"
-        android:strokeLineJoin="round" android:strokeWidth="8.70223"/>
-    <path android:fillColor="#00000000"
-        android:pathData="M18.053,61.565C25.263,61.565 31.107,55.721 31.107,48.511C31.107,41.302 25.263,35.458 18.053,35.458C10.844,35.458 5,41.302 5,48.511C5,55.721 10.844,61.565 18.053,61.565Z"
-        android:strokeColor="#979797" android:strokeLineCap="round"
-        android:strokeLineJoin="round" android:strokeWidth="8.70223"/>
-    <path android:fillColor="#00000000"
-        android:pathData="M70.267,92.023C77.476,92.023 83.32,86.178 83.32,78.969C83.32,71.76 77.476,65.916 70.267,65.916C63.058,65.916 57.213,71.76 57.213,78.969C57.213,86.178 63.058,92.023 70.267,92.023Z"
-        android:strokeColor="#979797" android:strokeLineCap="round"
-        android:strokeLineJoin="round" android:strokeWidth="8.70223"/>
-    <path android:fillColor="#00000000"
-        android:pathData="M29.322,55.08L59.04,72.397"
-        android:strokeColor="#979797" android:strokeLineCap="round"
-        android:strokeLineJoin="round" android:strokeWidth="8.70223"/>
-    <path android:fillColor="#00000000"
-        android:pathData="M58.997,24.622L29.322,41.939"
-        android:strokeColor="#979797" android:strokeLineCap="round"
-        android:strokeLineJoin="round" android:strokeWidth="8.70223"/>
+<vector android:height="24dp" android:tint="#999999"
+    android:viewportHeight="24" android:viewportWidth="24"
+    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@android:color/white" android:pathData="M18,16.08c-0.76,0 -1.44,0.3 -1.96,0.77L8.91,12.7c0.05,-0.23 0.09,-0.46 0.09,-0.7s-0.04,-0.47 -0.09,-0.7l7.05,-4.11c0.54,0.5 1.25,0.81 2.04,0.81 1.66,0 3,-1.34 3,-3s-1.34,-3 -3,-3 -3,1.34 -3,3c0,0.24 0.04,0.47 0.09,0.7L8.04,9.81C7.5,9.31 6.79,9 6,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3c0.79,0 1.5,-0.31 2.04,-0.81l7.12,4.16c-0.05,0.21 -0.08,0.43 -0.08,0.65 0,1.61 1.31,2.92 2.92,2.92 1.61,0 2.92,-1.31 2.92,-2.92s-1.31,-2.92 -2.92,-2.92z"/>
 </vector>
