--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/common_spacing"
-    >
+    android:padding="@dimen/common_spacing">
 
     <ImageView
         android:id="@+id/avatar"
@@ -40,17 +39,17 @@
         app:layout_constraintTop_toBottomOf="@id/author"
         tools:text="@sample/posts.json/data/published" />
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/menu_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
+        style="@style/Widget.AppTheme.MenuButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_more_vert_24" />
+        app:icon="@drawable/ic_baseline_more_vert_24" />
 
     <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier"
+        android:id="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
@@ -64,61 +63,52 @@
         android:autoLink="web"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/barrier"
+        app:layout_constraintTop_toBottomOf="@id/header"
         tools:text="@sample/posts.json/data/content" />
 
-    <ImageButton
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/footer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="content" />
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/like_button"
-        android:layout_width="@dimen/icons_size"
-        android:layout_height="@dimen/icons_size"
-        android:layout_marginTop="@dimen/common_spacing"
-        android:background="@android:color/transparent"
-        android:src="@drawable/like"
-        app:layout_constraintStart_toStartOf="@id/content"
-        app:layout_constraintTop_toBottomOf="@id/content" />
-
-    <TextView
-        android:id="@+id/likes_count"
+        style="@style/Widget.AppTheme.LikeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/little_spacing"
-        android:layout_marginTop="@dimen/common_spacing"
-        app:layout_constraintStart_toEndOf="@id/like_button"
-        app:layout_constraintTop_toBottomOf="@id/content"
-        tools:text="999" />
+        android:checkable="true"
+        android:contentDescription="@string/description_post_like"
+        app:icon="@drawable/ic_like_24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/footer"
+        tools:chected="@sample/posts.json/data/likedByMe"
+        tools:text="@sample/posts.json/data/likes" />
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/share_button"
-        android:layout_width="@dimen/icons_size"
-        android:layout_height="@dimen/icons_size"
-        android:layout_marginStart="@dimen/big_spacing"
-        android:layout_marginTop="@dimen/common_spacing"
-        android:background="@android:color/transparent"
-        android:src="@drawable/icon_share"
-        app:layout_constraintStart_toEndOf="@id/like_button"
-        app:layout_constraintTop_toBottomOf="@id/content" />
-
-    <TextView
-        android:id="@+id/share_count"
+        style="@style/Widget.AppTheme.IconButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/little_spacing"
-        android:layout_marginTop="@dimen/common_spacing"
-        app:layout_constraintStart_toEndOf="@id/share_button"
-        app:layout_constraintTop_toBottomOf="@id/content"
-        tools:text="100" />
+        android:layout_marginStart="@dimen/big_spacing"
+        android:contentDescription="@string/description_post_share"
+        app:icon="@drawable/ic_share_24dp"
+        app:layout_constraintStart_toStartOf="@id/like_button"
+        app:layout_constraintTop_toBottomOf="@id/footer"
+        tools:text="@sample/posts.json/data/shares"/>
 
 
     <ImageButton
         android:id="@+id/views_pic"
-        android:layout_width="@dimen/icons_size"
-        android:layout_height="@dimen/icons_size"
-        android:layout_marginTop="@dimen/common_spacing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/big_spacing"
         android:background="@android:color/transparent"
         android:src="@drawable/icon_eye"
         app:layout_constraintEnd_toEndOf="@id/content"
-        app:layout_constraintTop_toBottomOf="@id/content" />
+        app:layout_constraintTop_toBottomOf="@id/footer"
+        app:layout_constraintBottom_toBottomOf="@id/like_button"/>
 
     <TextView
         android:id="@+id/views_count"
@@ -127,6 +117,7 @@
         android:layout_marginStart="@dimen/little_spacing"
         android:layout_marginTop="@dimen/common_spacing"
         app:layout_constraintStart_toEndOf="@id/views_pic"
-        app:layout_constraintTop_toBottomOf="@id/content"
+        app:layout_constraintTop_toBottomOf="@id/footer"
+        app:layout_constraintBottom_toBottomOf="@id/views_pic"
         tools:text="999" />
 </androidx.constraintlayout.widget.ConstraintLayout>
