--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,6 +29,7 @@
     </style>
 
     <style name="Widget.AppTheme.MenuButton" parent= "Widget.AppTheme.IconButton">
+        <item name="android:backgroundTint">@android:color/transparent</item>
         <item name="iconTint">@color/icon_button_tint</item>
         <item name="android:minWidth">@dimen/icon_button_min_size</item>
         <item name="android:minHeight">@dimen/icon_button_min_size</item>
