--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,10 +3,12 @@
     <dimen name="common_spacing">16dp</dimen>
     <dimen name="little_spacing">8dp</dimen>
     <dimen name="big_spacing">62dp</dimen>
+    <dimen name="large_spacing">78dp</dimen>
     <dimen name="posts_avatar_size">48dp</dimen>
     <dimen name="icons_size">24dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="checkbox_padding_start">8dp</dimen>
     <dimen name="icon_button_padding">12dp</dimen>
     <dimen name="icon_button_min_size">48dp</dimen>
+    <dimen name="video_height">240dp</dimen>
 </resources>
