--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -86,6 +86,19 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:paddingStart="4dp"
+            android:paddingEnd="4dp"
+            app:layout_constraintBottom_toBottomOf="@id/video_preview"
+            app:layout_constraintEnd_toEndOf="@id/video_preview"
+            android:layout_margin="@dimen/little_spacing"
+            android:background="@drawable/rectangle_rounded_corners"
+            android:textColor="@color/white"
+            tools:text="0:55"
+            />
+
+        <TextView
             android:id="@+id/video_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -108,7 +121,7 @@
             android:id="@+id/play_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/circle_background"
+            android:background="@drawable/play_button_background"
             android:src="@drawable/play_button"
             app:layout_constraintBottom_toBottomOf="@id/video_preview"
             app:layout_constraintEnd_toEndOf="@id/video_preview"
