--- a/app/src/main/res/layout/fragment_edit_post.xml
+++ b/app/src/main/res/layout/fragment_edit_post.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.NewPostActivity">
+    tools:context=".activity.EditPostFragment">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/cancel_button"
@@ -17,16 +17,22 @@
         android:backgroundTint="@color/blue_gray_50"
         />
 
-    <EditText
-        android:id="@+id/edit"
-        android:layout_margin="@dimen/common_spacing"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        android:background="@android:color/transparent"
-        tools:text="@sample/posts.json/data/content"
-        />
+        android:layout_marginBottom="@dimen/bottom_app_bar_margin">
+
+        <EditText
+            android:id="@+id/edit"
+            android:layout_margin="@dimen/common_spacing"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="start|top"
+            android:inputType="textMultiLine"
+            android:background="@android:color/transparent"
+            tools:text="@sample/posts.json/data/content"
+            />
+    </ScrollView>
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBar"
