--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="bottom_app_bar_margin">132dp</dimen>
     <dimen name="common_spacing">16dp</dimen>
     <dimen name="little_spacing">8dp</dimen>
     <dimen name="big_spacing">62dp</dimen>
